Fix Cover image missing background

--- a/site/style.css
+++ b/site/style.css
@@ -1157,6 +1157,12 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 	}
 }
 
+/* Fix missing background */
+body.post-slug-cap-sur-le-wordcamp-paris-2019 .wp-block-cover-image {
+	background-image: url( https://2019.paris.wordcamp.org/files/2018/09/cloture-2018-cc-by-oliviergobet.jpg );
+	background-position: 35%;
+}
+
 @media screen and (max-width: 768px) {
 	.wp-block-gallery .blocks-gallery-item {
 		width: calc(100% / 1 - 16px);
@@ -1168,6 +1174,10 @@ ul.wp-block-latest-posts.is-grid.alignwide {
 
 	.wp-block-cover-image.has-parallax {
 		background-attachment: initial;
+	}
+
+	body.post-slug-cap-sur-le-wordcamp-paris-2019 .wp-block-cover-image {
+		background-position: 20%;
 	}
 }
 
